--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,32 @@
 cmake_minimum_required(VERSION 3.31 FATAL_ERROR)
 cmake_policy(VERSION 3.31)
 
-project(graph-creator DESCRIPTION "Graph Creator" VERSION 0.1.0 LANGUAGES CXX)
-
 if(NOT DEFINED ENV{VCPKG_ROOT})
 	message(FATAL_ERROR "VCPKG_ROOT is not defined!")
 endif()
 
+include(CMakePrintHelpers)
+cmake_print_variables(CMAKE_TOOLCHAIN_FILE)
+
+project(graph-creator DESCRIPTION "Graph Creator" VERSION 0.1.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_C_STANDARD 23)
 
-# TODO: Rename repo to "graph-builder"
+# TODO: Rename repo to "graph-builder" or "grator"
 add_executable(graph_creator src/main.cpp)
 target_precompile_headers(graph_creator PUBLIC src/main.hpp)
 
-# find_package(raylib)
-# target_link_libraries(graph_creator raylib)
+find_package(raylib CONFIG REQUIRED)
+find_package(glfw3 CONFIG REQUIRED)
+target_link_libraries(graph_creator raylib glfw)
 
-
-add_custom_target(run_after_generation ALL
-    COMMAND ${CMAKE_COMMAND} -E create_symlink
-        ${CMAKE_BINARY_DIR}/compile_commands.json
-        ${PROJECT_SOURCE_DIR}/compile_commands.json
-)
+# This is for clangd support. You can comment those lines if you don't use clangd
+# Check if the file exists
+if(EXISTS "${PROJECT_SOURCE_DIR}/.clangd")
+    message(STATUS "Creating symlink to 'compile_commands.json'")
+    add_custom_target(run_after_generation ALL
+        COMMAND ${CMAKE_COMMAND} -E create_symlink
+            ${CMAKE_BINARY_DIR}/compile_commands.json
+            ${PROJECT_SOURCE_DIR}/compile_commands.json
+    )
+endif()
